--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
