--- a/api/package.json
+++ b/api/package.json
@@ -13,10 +13,12 @@
     "@sanity/client": "^3.3.1",
     "@sanity/image-url": "^1.0.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "stripe": "^9.13.0"
   }
 }
