--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
@@ -15,6 +18,7 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "stripe": "^9.13.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
